--- a/modules/logistics/wms/how-to/setup-warehouse/toc.yml
+++ b/modules/logistics/wms/how-to/setup-warehouse/toc.yml
@@ -1,2 +1,6 @@
 - name: Overview
   href: index.md
+- name: Zones and locations
+  href: zones-and-locations.md
+- name: Warehouse policies
+  href: warehouse-policies.md
