--- a/modules/logistics/wms/how-it-works/task-types/toc.yml
+++ b/modules/logistics/wms/how-it-works/task-types/toc.yml
@@ -1,1 +1,10 @@
-
+- name: Receive
+  href: receive.md
+- name: Despatch
+  href: despatch.md
+- name: Move
+  href: move.md
+- name: Reconcile
+  href: reconcile.md
+- name: User task
+  href: user-task.md
