--- a/advanced/jobs/toc.yml
+++ b/advanced/jobs/toc.yml
@@ -10,3 +10,5 @@
   href: J30777.md
 - name: J30903 Deletе old document print images
   href: J30903.md
+- name: J33898 Deletе old document versions
+  href: J33898.md
