--- a/modules/crm/crm-common/crm-common-concepts/toc.yml
+++ b/modules/crm/crm-common/crm-common-concepts/toc.yml
@@ -2,6 +2,8 @@
   href: index.md
 - name: Determine line discount 
   href: determine-line-discount.md
+- name: Determine level 2 discount 
+  href: determine-level-2-discount.md 
 - name: Determine product price
   href: determine-product-price.md
 - name: Pricing
