--- a/modules/financials/accounting/operations/toc.yml
+++ b/modules/financials/accounting/operations/toc.yml
@@ -1,4 +1,4 @@
 - name: Overview
   href: index.md
-- name: Currency revaluations
-  href: currency-revaluations.md 
+- name: Currency revaluation
+  href: currency-revaluation.md 
