--- a/modules/logistics/wms/how-it-works/task-types/toc.yml
+++ b/modules/logistics/wms/how-it-works/task-types/toc.yml
@@ -4,7 +4,7 @@
   href: dispatch.md
 - name: Move
   href: move.md
-- name: Reconcile
-  href: reconcile.md
+- name: Count
+  href: Count.md
 - name: User task
   href: user-task.md
