--- a/modules/logistics/wms/how-to/setup-warehouse/toc.yml
+++ b/modules/logistics/wms/how-to/setup-warehouse/toc.yml
@@ -2,5 +2,7 @@
   href: index.md
 - name: Zones and locations
   href: zones-and-locations.md
+- name: Warehouse workers
+  href: warehouse-workers.md
 - name: Warehouse policies
   href: warehouse-policies.md
