--- a/modules/logistics/wms/how-to/toc.yml
+++ b/modules/logistics/wms/how-to/toc.yml
@@ -7,3 +7,5 @@
   href: document-flow.md
 - name: Enter initial availability
   href: initial-availability.md
+- name: Execute order lines
+  href: execute-order-lines.md
