- websites branch added - added a new website - API

--- a/advanced/toc.yml
+++ b/advanced/toc.yml
@@ -29,4 +29,6 @@
 - name: Security
   href: security/toc.yml
   topicHref: security/index.md
-  
+- name: Web sites
+  href: web-sites/toc.yml
+  topicHref: web-sites/index.md
