--- a/modules/crm/clientcenter/toc.yml
+++ b/modules/crm/clientcenter/toc.yml
@@ -4,5 +4,5 @@
   href: error-codes.md
 - name: Setup
   href: setup.md
-- name: Platform features
-  href: platform-features.md
+- name: Platform settings
+  href: platform-settings.md
