--- a/modules/financials/excise/toc.yml
+++ b/modules/financials/excise/toc.yml
@@ -6,5 +6,5 @@
   href: excise-categories.md
 - name: Excise products
   href: excise-products.md 
-- name: Excise administrative document: e-ADD export
+- name: Excise administrative document\: e-ADD export
   href: excise-administrative-document-e-add-export.md
