--- a/modules/logistics/wms/how-to/toc.yml
+++ b/modules/logistics/wms/how-to/toc.yml
@@ -9,3 +9,5 @@
   href: initial-availability.md
 - name: Execute order lines
   href: execute-order-lines.md
+- name: Check if a dispatch order can be fulfilled
+  href: check-can-be-fulfilled.md
