--- a/modules/logistics/planning/toc.yml
+++ b/modules/logistics/planning/toc.yml
@@ -12,3 +12,5 @@
   href: replenish-purchase.md
 - name: Replenishing suggestions for work orders
   href: replenish-production.md
+- name: Replenishing suggestions for transfer orders
+  href: replenish-transfer.md
