--- a/modules/logistics/wms/how-it-works/toc.yml
+++ b/modules/logistics/wms/how-it-works/toc.yml
@@ -3,6 +3,9 @@
 - name: Task types
   href: task-types/toc.yml
   topicHref: task-types/index.md
+- name: Barcode parsers
+  href: barcode-parsers/toc.yml
+  topicHref: barcode-parsers/index.md
 - name: Warehouse order execution
   href: warehouse-order-execution.md
 - name: Add reconciliation lines from the WMS module
