rate limits / domain api - new setting keys barcorde-parsers roc - fixed syntax error

--- a/modules/logistics/wms/how-it-works/barcode-parsers/toc.yml
+++ b/modules/logistics/wms/how-it-works/barcode-parsers/toc.yml
@@ -1,9 +1,8 @@
 - name: Overview
   href: index.md
-- name: P01: Product Code 
+- name: 'P01: Product Code'
   href: p01.md
-- name: P02: GS1 - Single Product
+- name: 'P02: GS1 - Single Product'
   href: p02.md
-- name: P03: GS1 – SSCC parser
-  href: p03md
-  
+- name: 'P03: GS1 – SSCC parser'
+  href: p03.md
