--- a/modules/logistics/wms/toc.yml
+++ b/modules/logistics/wms/toc.yml
@@ -5,10 +5,10 @@
   topicHref: how-to/index.md
 - name: How it works
   href: how-it-works/toc.yml
-- name: Logistic Units
+- name: Logistic units
   href: logistic-units/toc.yml
   topicHref: logistic-units/index.md
-- name: GS1 Barcodes
+- name: GS1 barcodes
   href: gs1-barcodes.md
 - name: Composite products
   href: composite-products/toc.yml
