--- a/modules/logistics/wms/logistic-units/toc.yml
+++ b/modules/logistics/wms/logistic-units/toc.yml
@@ -1,7 +1,7 @@
 - name: Overview
   href: index.md
-- name: Вир
-  href: Working with Logistic Units
+- name: Working with Logistic Units
+  href: working-with-lu.md
 - name: Logistic Labels
   href: logistic-labels.md
 - name: Advance Shipping Notice (ASN)
