--- a/modules/financials/excise/toc.yml
+++ b/modules/financials/excise/toc.yml
@@ -8,3 +8,5 @@
   href: excise-products.md 
 - name: Excise administrative document e-ADD export
   href: excise-administrative-document-e-add-export.md
+- name: Excise declaration export
+  href: excise-declaration-export.md
