--- a/modules/financials/excise/toc.yml
+++ b/modules/financials/excise/toc.yml
@@ -9,4 +9,4 @@
 - name: Excise administrative document e-ADD export
   href: excise-administrative-document-e-add-export.md
 - name: Excise declaration export
-  href: excise-declaration-export.md
+  href: еxcise-declaration-export.md
