--- a/modules/financials/excise/definitions/toc.yml
+++ b/modules/financials/excise/definitions/toc.yml
@@ -4,3 +4,5 @@
   href: excise-categories.md
 - name: Excise products
   href: excise-products.md 
+- name: Other Excise Definitions
+  href: other-excise-definitions.md 
