--- a/modules/financials/excise/country-specific/bulgaria/toc.yml
+++ b/modules/financials/excise/country-specific/bulgaria/toc.yml
@@ -1,5 +1,7 @@
 - name: Setup
   href: setup.md 
+- name: Excise Document
+  href: excise-document-bulgaria.md
 - name: Excise administrative document e-ADD export
   href: excise-administrative-document-e-add-export.md
 - name: Excise declaration export
