--- a/modules/financials/excise/country-specific/bulgaria/toc.yml
+++ b/modules/financials/excise/country-specific/bulgaria/toc.yml
@@ -4,5 +4,7 @@
   href: excise-document-alcohol.md
 - name: Export of e-ADD
   href: excise-administrative-document-e-add-export.md
+- name: Excise Declaration for Alcohol
+  href: excise-declaration-alcohol.md
 - name: Export of Excise Declaration
   href: еxcise-declaration-export.md
