--- a/modules/financials/excise/documents/toc.yml
+++ b/modules/financials/excise/documents/toc.yml
@@ -2,3 +2,6 @@
   href: index.md 
 - name: Excise Administrative Document
   href: excise-administrative-document.md
+- name: Excise Declaration
+  href: excise-declaration.md
+
