--- a/advanced/jobs/toc.yml
+++ b/advanced/jobs/toc.yml
@@ -12,3 +12,5 @@
   href: J30903.md
 - name: J33898 Deletе old document versions
   href: J33898.md
+- name: J35026 Delete old information messages
+  href: J35026.md
