calculated-attributes / QA - added a new topic

--- a/advanced/calculated-attributes/QA/toc.yml
+++ b/advanced/calculated-attributes/QA/toc.yml
@@ -18,3 +18,5 @@
   href: How-to-show-contact-of-a-person-in-persons-navigator.md
 - name: How to use a customer as a company?
   href: How-to-use-a-customer-as-a-company.md
+- name: What is the difference between DATESPAN and DATEDIFF operators??
+  href: what-is-the-difference-between-datespan-and-datediff.md
