--- a/advanced/jobs/toc.yml
+++ b/advanced/jobs/toc.yml
@@ -14,3 +14,5 @@
   href: J33898.md
 - name: J35026 Delete old information messages
   href: J35026.md
+- name: J35666 Delete old history data for attribute changes
+  href: J35666.md
