--- a/modules/logistics/wms/how-to/setup-warehouse/toc.yml
+++ b/modules/logistics/wms/how-to/setup-warehouse/toc.yml
@@ -6,3 +6,6 @@
   href: warehouse-workers.md
 - name: Warehouse policies
   href: warehouse-policies.md
+- name: Enter quantity of one pce
+  href: enter-quantity-of-one-pce.md
+  
