--- a/modules/logistics/wms/how-it-works/toc.yml
+++ b/modules/logistics/wms/how-it-works/toc.yml
@@ -6,3 +6,6 @@
 - name: Barcode parsers
   href: barcode-parsers/toc.yml
   topicHref: barcode-parsers/index.md
+- name: SCAN field
+  href: scan-field.md
+  
