--- a/modules/logistics/wms/toc.yml
+++ b/modules/logistics/wms/toc.yml
@@ -13,3 +13,6 @@
 - name: Composite products
   href: composite-products/toc.yml
   topicHref: composite-products/index.md
+- name: WMS Worker
+  href: wms-worker/toc.yml
+  topicHref: wms-worker/index.md
