--- a/modules/logistics/wms/how-it-works/toc.yml
+++ b/modules/logistics/wms/how-it-works/toc.yml
@@ -9,5 +9,5 @@
 - name: SCAN field
   href: scan-field.md
 - name: Recalculate quantities
-  href: scan-field.md
+  href: recalculate-quantities.md
   
