--- a/modules/logistics/wms/how-it-works/toc.yml
+++ b/modules/logistics/wms/how-it-works/toc.yml
@@ -8,6 +8,6 @@
   topicHref: barcode-parsers/index.md
 - name: SCAN field
   href: scan-field.md
-- name: Recalculate quantities
+- name: Recalculate product quantities
   href: recalculate-quantities.md
   
