--- a/modules/crm/clientcenter/toc.yml
+++ b/modules/crm/clientcenter/toc.yml
@@ -1,8 +1,10 @@
 - name: Overview
   href: index.md
-- name: Error codes
-  href: error-codes.md
+- name: How To
+  href: how-to/toc.yml
+  topicHref: how-to/index.md
+- name: Reference
+  href: reference.md
 - name: Setup
   href: setup.md
-- name: Platform settings
-  href: platform-settings.md
+  
