--- a/modules/logistics/wms/wms-worker/orders/toc.yml
+++ b/modules/logistics/wms/wms-worker/orders/toc.yml
@@ -1,5 +1,7 @@
 - name: Orders
   href: index.md
+- name: Scanning
+  href: scanning.md
 - name: Lines execution
   href: lines-execution.md
 - name: Picking routes
