--- a/modules/logistics/inventory/toc.yml
+++ b/modules/logistics/inventory/toc.yml
@@ -9,6 +9,9 @@
 - name: Store orders
   href: store-orders/toc.yml
   topicHref: store-orders/index.md
+- name: Available to promise
+  href: available-to-promise/toc.yml
+  topicHref: available-to-promise/index.md
 - name: Projected availability report
   href: projected-availability-report.md
 - name: Receipt and issue balance validation in store transfers
