--- a/modules/logistics/toc.yml
+++ b/modules/logistics/toc.yml
@@ -1,5 +1,8 @@
 - name: Overview
   href: index.md
+- name: Common
+  href: common/toc.yml
+  topicHref: common/index.md
 - name: Inventory
   href: inventory/toc.yml
   topicHref: inventory/index.md
