--- a/modules/crm/crm-common/toc.yml
+++ b/modules/crm/crm-common/toc.yml
@@ -1,6 +1,6 @@
 - name: Overview
   href: index.md
-- name: CRM common concepts
+- name: Concepts
   href: crm-common-concepts/toc.yml
   topicHref: crm-common-concepts/index.md
   
