--- a/modules/crm/clientcenter/toc.yml
+++ b/modules/crm/clientcenter/toc.yml
@@ -1,10 +1,7 @@
 - name: Overview
   href: index.md
-- name: How To
+- name: Step-by-step guides
   href: how-to/toc.yml
   topicHref: how-to/index.md
 - name: Reference
   href: reference.md
-- name: Setup
-  href: setup.md
-  
