added datediff/datespan to toc

--- a/advanced/calculated-attributes/operators/toc.yml
+++ b/advanced/calculated-attributes/operators/toc.yml
@@ -16,6 +16,10 @@
   href: convert.md
 - name: COUNT
   href: count.md
+- name: DATEDIFF
+  href: datediff.md
+- name: DATESPAN
+  href: datespan.md  
 - name: DIVIDE
   href: divide.md
 - name: EQUAL
