--- a/modules/toc.yml
+++ b/modules/toc.yml
@@ -1,5 +1,8 @@
 - name: Overview
   href: index.md
+- name: My
+  href: my/toc.yml
+  topicHref: my/index.md
 - name: CRM
   href: crm/toc.yml
 - name: Finance
