--- a/modules/logistics/wms/logistic-units/toc.yml
+++ b/modules/logistics/wms/logistic-units/toc.yml
@@ -1,5 +1,7 @@
 - name: Overview
   href: index.md
+- name: How to
+  href: how-to/toc.yml
 - name: Working with Logistic Units
   href: working-with-lu.md
 - name: Logistic Labels
