--- a/modules/logistics/wms/logistic-units/How-to/toc.yml
+++ b/modules/logistics/wms/logistic-units/How-to/toc.yml
@@ -1,4 +1,4 @@
  - name: Create a new LU
   href: Create_New_LU.md
- - name: Create multiple lUNs
+ - name: Create multiple LUNs
   href: Create_LUNs.md
