--- a/modules/logistics/wms/logistic-units/toc.yml
+++ b/modules/logistics/wms/logistic-units/toc.yml
@@ -2,7 +2,7 @@
   href: index.md
 - name: How to
   href: how-to/toc.yml
-  topicHref: how-to/index.md
+  topicHref: how-to/Create_LUNs.md
 - name: Working with Logistic Units
   href: working-with-lu.md
 - name: Logistic Labels
