--- a/modules/logistics/wms/logistic-units/toc.yml
+++ b/modules/logistics/wms/logistic-units/toc.yml
@@ -5,6 +5,8 @@
   topicHref: how-to/Create_LUNs.md
 - name: Working with Logistic Units
   href: working-with-lu.md
+- name: Create multiple LUNs
+  href: Create_LUNs.md
 - name: Logistic Labels
   href: logistic-labels.md
 - name: Advance Shipping Notice (ASN)
