--- a/modules/logistics/wms/logistic-units/toc.yml
+++ b/modules/logistics/wms/logistic-units/toc.yml
@@ -6,7 +6,7 @@
 - name: Working with Logistic Units
   href: working-with-lu.md
 - name: Create multiple LUNs
-  href: Create_LUNs.md
+  href: create_LUNs.md
 - name: Logistic Labels
   href: logistic-labels.md
 - name: Advance Shipping Notice (ASN)
