--- a/modules/logistics/wms/logistic-units/How-to/toc.yml
+++ b/modules/logistics/wms/logistic-units/How-to/toc.yml
@@ -1,3 +1,8 @@
+ - name: Working with Logistic Units
+  href: working-with-lu.md
  - name: Create a new LU
   href: Create_New_LU.md
+ - name: Create multiple LUNs
+  href: create_LUNs.md
+  
  
