--- a/modules/logistics/wms/logistic-units/toc.yml
+++ b/modules/logistics/wms/logistic-units/toc.yml
@@ -1,9 +1,8 @@
 - name: Overview
   href: index.md
-- name: Working with Logistic Units
-  href: working-with-lu.md
-- name: Create multiple LUNs
-  href: create_LUNs.md
+- name: How to
+  href: how-to/toc.yml
+  topicHref: how-to/list.md
 - name: Logistic Labels
   href: logistic-labels.md
 - name: Advance Shipping Notice (ASN)
