--- a/modules/logistics/wms/logistic-units/How-to/toc.yml
+++ b/modules/logistics/wms/logistic-units/How-to/toc.yml
@@ -1,8 +1,9 @@
  - name: Working with Logistic Units
-  href: working-with-lu.md
+ href: working-with-lu.md
  - name: Create a new LU
-  href: Create_New_LU.md
+ href: Create_New_LU.md
  - name: Create multiple LUNs
-  href: create_LUNs.md
-  
+ href: create_LUNs.md
+ - name: Overview
+ href: index.md 
  
