--- a/modules/logistics/wms/logistic-units/toc.yml
+++ b/modules/logistics/wms/logistic-units/toc.yml
@@ -2,7 +2,7 @@
   href: index.md
 - name: How to
   href: how-to/toc.yml
-  topicHref: how-to/list.md
+  topicHref: how-to/index.md
 - name: Logistic Labels
   href: logistic-labels.md
 - name: Advance Shipping Notice (ASN)
