--- a/modules/logistics/wms/logistic-units/How-to/toc.yml
+++ b/modules/logistics/wms/logistic-units/How-to/toc.yml
@@ -1,6 +1,6 @@
  - name: Overview
    href: index.md 
- - name: Working with Logistic Units
+ - name: Work with LUs
    href: working-with-lu.md
  - name: Create a new LU
    href: Create_New_LU.md
