--- a/modules/applications/toc.yml
+++ b/modules/applications/toc.yml
@@ -1,11 +1,14 @@
 - name: Overview
   href: index.md
-- name: Service
-  href: service/toc.yml
-  topicHref: service/index.md
 - name: Enterprise asset management
   href: enterprise-asset-management/toc.yml
   topicHref: enterprise-asset-management/index.md
+- name: Rental
+  href: rental/toc.yml
+  topicHref: rental/index.md
+- name: Service
+  href: service/toc.yml
+  topicHref: service/index.md
 - name: Data Warehouse
   href: data-warehouse/toc.yml
   topicHref:  data-warehouse/index.md
