--- a/modules/logistics/inventory/toc.yml
+++ b/modules/logistics/inventory/toc.yml
@@ -3,6 +3,9 @@
 - name: Execute store orders function
   href: execute-store-orders-function/toc.yml
   topicHref: execute-store-orders-function/index.md
+- name: Adjust base cost function
+  href: adjust-base-cost.md
+  topicHref: adjust-base-cost.md  
 - name: Lots
   href: lots/toc.yml
   topicHref: lots/index.md
