--- a/modules/logistics/inventory/how-to/toc.yml
+++ b/modules/logistics/inventory/how-to/toc.yml
@@ -1,3 +1,8 @@
 - name: How To
   href: index.md
+- name: Execute store orders
+  href: execute-store-orders/toc.yml
+  topicHref: execute-store-orders/index.md
+- name: Adjust base cost
+  href: adjust-base-cost.md
   
