--- a/modules/logistics/inventory/toc.yml
+++ b/modules/logistics/inventory/toc.yml
@@ -2,10 +2,7 @@
   href: index.md
 - name: How To
   href: how-to/toc.yml
-  topicHref: hpw-to/index.md
-- name: Adjust base cost function
-  href: adjust-base-cost.md
-  topicHref: adjust-base-cost.md  
+  topicHref: how-to/index.md
 - name: Lots
   href: lots/toc.yml
   topicHref: lots/index.md
