--- a/modules/logistics/wms/wms-worker/toc.yml
+++ b/modules/logistics/wms/wms-worker/toc.yml
@@ -15,3 +15,7 @@
   href: reconcile.md
 - name: System requirements
   href: system-requirements.md
+- name: Take
+  href: take.md
+- name: Start
+  href: start.md
