--- a/modules/financials/excise/documents/toc.yml
+++ b/modules/financials/excise/documents/toc.yml
@@ -4,4 +4,5 @@
   href: excise-administrative-document.md
 - name: Excise Declaration
   href: excise-declaration.md
-
+- name: Excise Stamp Operations
+  href: excise-stamp-operation.md
